[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "PyYTMusic"
version = "0.1.4"
authors = [
  { name="Samet Keskin", email="sametkeskin.py@gmail.com" },
]
description = "Python Youtube Music API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/abdulsamedkeskin/PyYTMusic"
"Bug Tracker" = "https://github.com/abdulsamedkeskin/PyYTMusic/issues"
